[gd_scene load_steps=12 format=3 uid="uid://kqhy1u5xylje"]

[ext_resource type="Script" path="res://Levels/space.gd" id="1_vpjcn"]
[ext_resource type="Texture2D" uid="uid://co06jc3xv8mhw" path="res://assets/background_stars1.png" id="2_v32nx"]
[ext_resource type="Script" path="res://camera_2d.gd" id="3_xv8jf"]
[ext_resource type="PackedScene" uid="uid://dmrhgm8d80jit" path="res://Cannon/cannon.tscn" id="4_yc5ui"]
[ext_resource type="Script" path="res://cup/cup.gd" id="5_td86i"]
[ext_resource type="FontFile" uid="uid://ctxiaqhu73s6r" path="res://assets/m6x11plus.ttf" id="6_vfsah"]
[ext_resource type="PackedScene" uid="uid://dqqiobtdcoijb" path="res://Planets/planet.tscn" id="7_itdxs"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0cspy"]
normal = Vector2(0, 1)
distance = 20.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kgpng"]
distance = 19.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_mscwo"]
normal = Vector2(1, 0)
distance = 21.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tfka3"]
normal = Vector2(-1, 0)
distance = 20.0

[node name="Space 1" type="Node2D" node_paths=PackedStringArray("goal")]
z_index = 100
z_as_relative = false
script = ExtResource("1_vpjcn")
goal = NodePath("Goal")
cannon_force = 120
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
texture_filter = 1
position = Vector2(319, 182)
texture = ExtResource("2_v32nx")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="Background"]
z_index = -100
texture_filter = 1
position = Vector2(1, 276)
rotation = 3.14159
texture = ExtResource("2_v32nx")

[node name="Background2" type="Sprite2D" parent="Background"]
z_index = -100
texture_filter = 1
position = Vector2(-1, -269)
rotation = 3.14159
texture = ExtResource("2_v32nx")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)
script = ExtResource("3_xv8jf")
metadata/_edit_lock_ = true

[node name="Cannon" parent="." instance=ExtResource("4_yc5ui")]
z_index = 50
position = Vector2(609, 182)
angle = 3.56222

[node name="Goal" type="StaticBody2D" parent="."]
position = Vector2(19, 175)
rotation = 1.65283
collision_layer = 2
script = ExtResource("5_td86i")
metadata/_edit_group_ = true

[node name="Counter" type="RichTextLabel" parent="Goal"]
z_index = 1000
texture_filter = 1
offset_left = -14.0
offset_top = -65.0
offset_right = 35.0
offset_bottom = -47.0
rotation = -1.57079
theme_override_colors/default_color = Color(0.298039, 0.337255, 0.443137, 1)
theme_override_fonts/normal_font = ExtResource("6_vfsah")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[center]0/5"
scroll_active = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Goal"]
polygon = PackedVector2Array(99.9973, 215.531, 32.8815, 229.076, -37.1556, 255.905)

[node name="Detection" type="Area2D" parent="Goal"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Goal/Detection"]
polygon = PackedVector2Array(-0.179123, -63.1979, -15.3745, -64.9586, -26.1603, -74.1056, -30.3793, -88.8093, -24.632, -104.332, -12.4132, -114.367, 6.76875, -112.934, 17.5545, -103.787, 21.7736, -89.0838, 17.9376, -74.7211)

[node name="Planet2" parent="." instance=ExtResource("7_itdxs")]
z_index = 191
position = Vector2(70, 212)
radius = 9.0
mass = 15.0
white_hole = false
black_hole = false
movable = true

[node name="BH" parent="." instance=ExtResource("7_itdxs")]
z_index = 201
position = Vector2(329, 181)
radius = 74.188
mass = 100.0
white_hole = false
black_hole = true

[node name="Target" parent="." instance=ExtResource("7_itdxs")]
position = Vector2(108, 178)
radius = 16.596
mass = 30.0
white_hole = false
black_hole = false

[node name="Planet5" parent="." instance=ExtResource("7_itdxs")]
position = Vector2(637, 183)
radius = 25.644
mass = 10.0
white_hole = false
black_hole = false

[node name="CannonTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3

[node name="CannonPreviewTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[node name="Next Level UI" type="Node2D" parent="."]

[node name="ShootTXT" type="RichTextLabel" parent="Next Level UI"]
z_index = 1001
texture_filter = 1
offset_left = 488.0
offset_top = 323.0
offset_right = 612.0
offset_bottom = 344.0
theme_override_colors/default_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_fonts/normal_font = ExtResource("6_vfsah")
theme_override_font_sizes/normal_font_size = 18
text = "[ENTER] to continue"

[node name="ShootBG" type="Polygon2D" parent="Next Level UI"]
z_index = 1000
position = Vector2(772, 303)
rotation = -3.14159
scale = Vector2(1.27864, 0.991375)
color = Color(0.298039, 0.337255, 0.443137, 1)
polygon = PackedVector2Array(178, -46, 224.456, -41.358, 229.149, -20.1754, 188, -18, 128, -17, 123.786, -23.8474, 120, -30, 121, -44)

[node name="ShootTXT" type="RichTextLabel" parent="."]
z_index = 1001
texture_filter = 1
offset_left = 11.0
offset_top = 334.0
offset_right = 121.0
offset_bottom = 357.0
theme_override_colors/default_color = Color(0.960784, 0.960784, 0.960784, 0.231373)
theme_override_fonts/normal_font = ExtResource("6_vfsah")
theme_override_font_sizes/normal_font_size = 18
text = "[R] to reset"

[node name="ScreenEdges" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(330, -19)
shape = SubResource("WorldBoundaryShape2D_0cspy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(323, 379)
shape = SubResource("WorldBoundaryShape2D_kgpng")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(-20, 180)
shape = SubResource("WorldBoundaryShape2D_mscwo")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ScreenEdges"]
position = Vector2(660, 183)
shape = SubResource("WorldBoundaryShape2D_tfka3")

[connection signal="timeout" from="CannonTimer" to="." method="_on_cannon_timer_timeout"]
[connection signal="timeout" from="CannonPreviewTimer" to="." method="_on_cannon_preview_timer_timeout"]
